--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -14,6 +14,7 @@ library(plotly)
 library(gridExtra)
 library(calecopal) 
 library(gt)
+library(ggrepel)
 
 # library(ggpubr) # customize ggplot2 for publication
 # library(broom)
@@ -28,11 +29,24 @@ library(gt)
 # devtools::install_github("gavinsimpson/ggvegan")
 # 
 # library(ggpmisc)
-
-# Set seed for analyses
-set.seed(3980)
 ```
 
+
+```{r}
+# Set seed for analyses
+set.seed(3980)
+
+clean_background <- theme(plot.background = element_rect("white"),
+        panel.background = element_rect("white"),
+        panel.grid = element_line("white"),
+        axis.line = element_line("gray25"),
+        axis.text = element_text(size = 12, color = "gray25"),
+        axis.title = element_text(color = "gray25"),
+        legend.text = element_text(size = 12),
+        legend.key = element_rect("white"))
+```
+
+### load data
 
 ```{r load data}
 
@@ -492,34 +506,56 @@ p
 
 ########### Environ PCA
 
-birdPCA <- rda(df)
+ # Select the columns to exclude from scaling
+exclude_names <- c("site_rep", "site", "plant_cluster", "rowname", "last_fire", "environ_cluster")
 
-PCAscores <- vegan::scores(birdPCA, display = "sites") %>% 
-  as.data.frame() %>% 
-  rownames_to_column("site") %>% 
-    mutate(rowname = 1:39) %>% 
-    mutate(rowname = as.character(rowname)) %>% 
-  full_join(cluster, by = "rowname") %>% 
-   full_join(my_groups, by = "rowname") %>% 
-  rename(environ_cluster = sub_grp) %>% 
-     mutate(environ_cluster = as.character(environ_cluster))
+# Separate the data into unscaled and scaled parts
+unscaled_columns <- df %>%
+  dplyr::select(all_of(exclude_names))  # Unscaled columns
 
-PCAvect <- scores(birdPCA, display = "species") %>% 
-  as.data.frame()
+scaled_columns <- df %>%
+  dplyr::select(-all_of(exclude_columns)) %>%  # All other columns (to be scaled)
+  scale()  # Scale only the selected columns
+
+# Combine the unscaled and scaled parts back together
+final_df <- cbind(unscaled_columns, scaled_columns)
+
+# Run PCA on the scaled part of the data only (ignoring the unscaled columns)
+pca_result <- prcomp(scaled_columns, center = TRUE, scale = TRUE)
+pca_scores <- pca_result$x  # These are the scores (transformed data)
+
+# View PCA results
+summary(pca_result)
+summary(pca_scores)
+
+pca_df <- as.data.frame(pca_result$x)
+loadings_df <- as.data.frame(pca_result$rotation) #df with variables' vectors
+loadings_df <- loadings_df * 5 # scale for visuals
+pca_df$Environmental_Cluster <- df$environ_cluster  # add column for clustering
+pca_df$Plant_Cluster <- df$plant_cluster  # add column for clustering
 
 plot_PCA <- ggplot() +
-  geom_point(data = PCAscores, 
-             aes(x = PC1, y = PC2, color = environ_cluster, shape = environ_cluster, size = 3)) +
-  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) +
+  geom_point (data = pca_df,
+              aes(x = PC1, y = PC2, color = Environmental_Cluster, shape = Plant_Cluster), 
+              size = 4) +  
+  scale_color_manual(values = c("1" = "orange", "2" = "darkgreen")) +
+   scale_shape_manual(values = c("1" = 0, "2" = 4, "3" = 2, "4" = 3, "5" = 7)) +
+  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
   geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
-  geom_segment(data = PCAvect, aes(x = 0, y = 0, xend = PC1, yend = PC2), arrow = arrow(length = unit(0.2, "cm"))) +
-  geom_text(data = PCAvect, aes(x = PC1, y = PC2, label = rownames(PCAvect))) +
-  theme_bw() +
-  labs(x = "PC1",
-       y = "PC2",
-       title = "Principal Components Analysis") 
-
-
+  geom_segment(data = loadings_df, 
+               aes(x = 0, y = 0, xend = PC1, yend = PC2),  # Vectors for loadings
+               arrow = arrow(length = unit(0.2, "cm")), 
+               color = "black", alpha = 0.8) +             # Vectors in blue, alpha = transparency (0 = transparent, 1 = solid)
+  geom_text_repel(data = loadings_df,                    # Text labels for loadings
+                  aes(x = PC1, y = PC2, label = rownames(loadings_df)),
+                  size = 4, color = "blue") +             # Text labels in blue
+  labs(title = "PCA of Environmental Variables", 
+       x = "Principal Component 1 (31.86%)",
+       y = "Principal Component 2 (21.14%)") +                  
+  #clean_background +      
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5))          # Center title
+  
 plot_PCA
 
 ```
