--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -14,7 +14,7 @@ library(plotly)
 library(gridExtra)
 library(calecopal) 
 library(gt)
-library(ggrepel)
+library(ggrepel) # avoid overlaping labes in ggplot2
 
 # library(ggpubr) # customize ggplot2 for publication
 # library(broom)
@@ -33,8 +33,12 @@ library(ggrepel)
 
 
 ```{r}
+
+####################### set basics
+
 # Set seed for analyses
 set.seed(3980)
+
 
 clean_background <- theme(plot.background = element_rect("white"),
         panel.background = element_rect("white"),
@@ -411,7 +415,7 @@ results
 
 #### Visualize community differences by environmental variables
 
-```{r nmds by species percent cover}
+```{r nmds by species percent cover, include = FALSE}
           
 # the AUTOTRANSFORM = F skips the automatic data transformations and uses the input data as is
 # - when the raw data contains the information you need (e.g., abundance)
@@ -442,7 +446,6 @@ points(mds, display = "sites", cex = 2* # 2x for visibility
 # larger points = less well represented
 
 ```
-
 
 ```{r environ nmds, include=FALSE}
 
@@ -506,15 +509,21 @@ p
 
 ########### Environ PCA
 
- # Select the columns to exclude from scaling
-exclude_names <- c("site_rep", "site", "plant_cluster", "rowname", "last_fire", "environ_cluster")
+
+pca_data <- extracted_prep %>% 
+  dplyr::select(!c(rowname, aspect, site, last_fire)) %>% 
+  left_join(environ.subgrp.df, by = "site_rep") %>%
+   rename(environ_cluster = sub_grp) 
+
+# Select the columns to exclude from scaling
+exclude_names <- c("site_rep", "plant_cluster", "rowname", "environ_cluster")
 
 # Separate the data into unscaled and scaled parts
-unscaled_columns <- df %>%
+unscaled_columns <- pca_data %>%
   dplyr::select(all_of(exclude_names))  # Unscaled columns
 
-scaled_columns <- df %>%
-  dplyr::select(-all_of(exclude_columns)) %>%  # All other columns (to be scaled)
+scaled_columns <- pca_data %>%
+  dplyr::select(-all_of(exclude_names)) %>%  # All other columns (to be scaled)
   scale()  # Scale only the selected columns
 
 # Combine the unscaled and scaled parts back together
@@ -531,15 +540,19 @@ summary(pca_scores)
 pca_df <- as.data.frame(pca_result$x)
 loadings_df <- as.data.frame(pca_result$rotation) #df with variables' vectors
 loadings_df <- loadings_df * 5 # scale for visuals
-pca_df$Environmental_Cluster <- df$environ_cluster  # add column for clustering
-pca_df$Plant_Cluster <- df$plant_cluster  # add column for clustering
+pca_df$Environmental_Cluster <- pca_data$environ_cluster  # add column for clustering
+pca_df$Plant_Cluster <- pca_data$plant_cluster  # add column for clustering
+pca_df <- pca_df %>% 
+    mutate(Environmental_Cluster = as.character(Environmental_Cluster)) %>% 
+   mutate(Plant_Cluster = as.character(Plant_Cluster))
 
-plot_PCA <- ggplot() +
+
+PCA_plot <- ggplot() +
   geom_point (data = pca_df,
               aes(x = PC1, y = PC2, color = Environmental_Cluster, shape = Plant_Cluster), 
               size = 4) +  
   scale_color_manual(values = c("1" = "orange", "2" = "darkgreen")) +
-   scale_shape_manual(values = c("1" = 0, "2" = 4, "3" = 2, "4" = 3, "5" = 7)) +
+  scale_shape_manual(values = c("1" = 0, "2" = 4, "3" = 2, "4" = 3, "5" = 7)) +
   geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
   geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
   geom_segment(data = loadings_df, 
@@ -550,13 +563,70 @@ plot_PCA <- ggplot() +
                   aes(x = PC1, y = PC2, label = rownames(loadings_df)),
                   size = 4, color = "blue") +             # Text labels in blue
   labs(title = "PCA of Environmental Variables", 
-       x = "Principal Component 1 (31.86%)",
-       y = "Principal Component 2 (21.14%)") +                  
+       x = "Principal Component 1 (35.64%)",
+       y = "Principal Component 2 (23.53%)") +                  
   #clean_background +      
   theme_bw()+
-  theme(plot.title = element_text(hjust = 0.5))          # Center title
-  
-plot_PCA
+  theme(plot.title = element_text(hjust = 0.5)) +         # Center title
+  xlim(-4, 4) +
+  ylim(-5, 4)
+
+PCA_environcluster <- ggplot() +
+  geom_point (data = pca_df,
+              aes(x = PC1, y = PC2, color = Environmental_Cluster, shape = Environmental_Cluster), 
+              size = 4) +  
+  scale_color_manual(values = c("1" = "orange", "2" = "darkgreen")) +
+  #scale_shape_manual(values = c("1" = 0, "2" = 4, "3" = 2, "4" = 3, "5" = 7)) +
+  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
+  geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
+  geom_segment(data = loadings_df, 
+               aes(x = 0, y = 0, xend = PC1, yend = PC2),  # Vectors for loadings
+               arrow = arrow(length = unit(0.2, "cm")), 
+               color = "black", alpha = 0.8) +             # Vectors in blue, alpha = transparency (0 = transparent, 1 = solid)
+  geom_text_repel(data = loadings_df,                    # Text labels for loadings
+                  aes(x = PC1, y = PC2, label = rownames(loadings_df)),
+                  size = 4, color = "blue") +             # Text labels in blue
+  labs(title = "PCA of Environmental Variables", 
+       x = "Principal Component 1 (35.64%)",
+       y = "Principal Component 2 (23.53%)") +                  
+  #clean_background +      
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5)) +         # Center title
+  xlim(-4, 4) +
+  ylim(-5, 4)
+
+PCA_plantcluster <- ggplot() +
+  geom_point (data = pca_df,
+              aes(x = PC1, y = PC2, color = Plant_Cluster, shape = Plant_Cluster), 
+              size = 4) +  
+scale_color_manual(values = c("1" = "black", "2" = "red", "3" = "green", "4" = "blue", "5" = "cyan"),
+                     labels = c("1" = "LuHiAv", "2" = "CeStBr", "3" = "HiAvBr", "4" = "FeCeAv", "5" = "HeRhRh")) +
+  scale_shape_manual(values = c("1" = 16, "2" = 17, "3" = 18, "4" = 19, "5" = 20),
+                     labels = c("1" = "LuHiAv", "2" = "CeStBr", "3" = "HiAvBr", "4" = "FeCeAv", "5" = "HeRhRh")) +
+  geom_vline(xintercept = c(0), color = "grey70", linetype = 2) + 
+  geom_hline(yintercept = c(0), color = "grey70", linetype = 2) +
+  geom_segment(data = loadings_df, 
+               aes(x = 0, y = 0, xend = PC1, yend = PC2),  # Vectors for loadings
+               arrow = arrow(length = unit(0.2, "cm")), 
+               color = "black", alpha = 0.8) +             # Vectors in blue, alpha = transparency (0 = transparent, 1 = solid)
+  geom_text_repel(data = loadings_df,                    # Text labels for loadings
+                  aes(x = PC1, y = PC2, label = rownames(loadings_df)),
+                  size = 4, color = "blue") +             # Text labels in blue
+  labs(title = "PCA of Environmental Variables", 
+       x = "Principal Component 1 (35.64%)",
+       y = "Principal Component 2 (23.53%)") +                  
+  #clean_background +      
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5)) +         # Center title
+  xlim(-4, 4) +
+  ylim(-5, 4)
+
+PCA_plot
+
+PCA_environcluster
+
+PCA_plantcluster
+
 
 ```
 
